# indigo-class

./: .env.example  .flake8  .gitignore  Dockerfile  FEATURES.md  README.md  `  docker-compose.yaml  main.py  pyproject.toml  schema.sql  seed.py  test-pr-front.html  thytest.txt
.github/: CODEOWNERS
app/: __init__.py  globals.py
app/controllers/: admin_user.py  affirmations.py  auth.py  categories.py  reset_password.py  root.py  user.py  user_settings.py
app/controllers/admin/: dashboard.py  user.py
app/models/: __init__.py
app/static/scripts/: dashboard.js  index.js  user_setting.js  user_settings.js
app/static/styles/: affirmations.css  auth.css  auth_form.css  home.css  index.css  register_login.css  register_login_resetpassword.css  user_setting.css
app/templates/: DailyDoseIndexScript.js  RegisterPage.css  RegisterPage.html  _footer copy.html  _footer.html  _header copy.html  _header.html  _headeradminTEST.html  base.html  daily_dose_login.html  daily_dose_register.html  register_page.css  register_page.html
app/templates/admin/: dashboard.html  dashboard_affirmations.html  dashboard_categories.html  dashboard_daily_mail_history.html  dashboard_head.html  dashboard_users.html
app/templates/affirmations/: add.html  edit.html  index.html
app/templates/auth/: login.html  new_password.html  profile.html  register.html  reset_password.html  user_setting.html  (+2 more)
frontend/: index.html
frontendDev/: DailyDoseIndex.html  DailyDoseScriptIndex.js  DailyDoseStyles.css
instance/: database.db
static/styles/: index.css
templates/: base.html  layout.html
(+24 files in other folders)
